welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:27: error: not found: value y
				setPos(x,y+1)
                                         ^